<resources>
    <string name="app_name">SqrFactor</string>
    <string name="hometext">This space has been created for you to learn and explore. A platform designed thoughtfully for architects by a team of architects and developers.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">Open</string>
    <string name="Close">Closed</string>
    <string name="noti_string"><![CDATA[<b>Henry</b>]]> commented on your status.</string>
    <string name="comp_brief"><![CDATA[<h1>Brief</h1>]]>\n\n
Young Designers is a design contest for architects and designers in the first 5 formative years of their firm. It is an initiative by Indian Architect &amp; Builder that offers a platform to emerging designers to showcase not only their work but also a chance to communicate their ideas, values and design principles through the publication.
<![CDATA[<br>]]><![CDATA[<br>]]>
An initiative of IA&amp;B since last 19 year which provides a platform for young architects &amp; designer to publish their project and get themselves recognized.
<![CDATA[<br>]]><![CDATA[<br>]]>
<![CDATA[<b>Categories</b>]]>:<![CDATA[<br>]]>

Architecture, Residential Interior Design, Commercial Interior Design, Product Design, Public Installations.
<![CDATA[<br>]]><![CDATA[<br>]]>
<![CDATA[<b>Project Submission</b>]]>:<![CDATA[<br>]]>

Architects/ Firms have to submit the Project brief in 300 words along with low-resolution drawings, sectional plan, and images of the project in PDF format.
<![CDATA[<br>]]><![CDATA[<br>]]>
<![CDATA[<b>Eligibility Criteria</b>]]>:<![CDATA[<br>]]>

Only architects and firms that have not been published in any national/international journal are eligible.<![CDATA[<br>]]><![CDATA[<br>]]>

The project should be less than 3 years old from date of execution/handover.<![CDATA[<br>]]><![CDATA[<br>]]>

Conceptual designs and projects under construction are not eligible.<![CDATA[<br>]]><![CDATA[<br>]]>

Architects can participate in any number of categories. Maximum entries per category are 3.<![CDATA[<br>]]><![CDATA[<br>]]>

<![CDATA[<b>About</b>]]>:<![CDATA[<br>]]>

Indian Architect &amp; Builder is India\'s oldest and premier Architecture &amp; Design publication which has completed 31 years of publication reaching to over 40,000+ AEC professionals. The magazine explores the latest in the field of Architecture, Engineering &amp; Construction. </string>
    <string name="comp_brief2"><![CDATA[<h1>Brief</h1>]]>\n\nAll designed objects, whether conceived by an architect,artist, graphic designer, industrial designer, or landscape architect, tell a story.
<![CDATA[<br>]]><![CDATA[<br>]]>
Their stories can sometimes be discerned easily, and at other times need to be discovered through thoughtful consideration. The story can be as simple as a metaphor or as complex as a novel.
<![CDATA[<br>]]><![CDATA[<br>]]>
Just as the adage goes, you can't judge the object (book) by its exterior (cover). The richness of the object is in its content.
<![CDATA[<br>]]><![CDATA[<br>]]>
Architects are natural storytellers – it’s a process that is inherently built into our creative process and when used properly, it’s one of the very best tools in our tool bag. </string>
    <string name="comp_brief3"><![CDATA[<h1>The Challenge</h1>]]>\n\n
Every story or narrative is a series of events tied together into a plot. The key is to display your concept in the most appropriate visual form for the project in question
<![CDATA[<br>]]><![CDATA[<br>]]>
The Archcember challenge is about telling your story through illustrations (sketches/doodles/paintings or computer generated illustrations and graphics) related to architecture.
<![CDATA[<br>]]><![CDATA[<br>]]>
• We will give you 1 word every two days and you have to tell us a story through your illustration and an article of 200 words which justifies your concept.
<![CDATA[<br>]]><![CDATA[<br>]]>
• Not necessarily, but if the illustrations respond to the theme of the contest i.e. Architecture, it would be much more meaningful.
<![CDATA[<br>]]><![CDATA[<br>]]>
• Your Sketches can narrate stories through functional or explanatory , social, investigative and sarcastic approaches or comic strips</string>
    <string name="comp_brief4"><![CDATA[<h1>Judging Criteria</h1>]]>\n\n
We know you are an amazing story-teller and all the stories are good in their own way. But we will have to choose the best to announce winners and here are few criteria’s that the jury has framed:
\n\n
• How well the word has been understood by the participant?
\n\n
• Originality and creativity – Is the work fundamentally different from existing ideas, sketches or stories
\n\n
• Interactivity and engagement – Is the story interactive enough to engage the jury and grab their attention
\n\n
• 60% marks will be given to the illustration and 40% will be awarded for the story considering the points above.</string>
    <string name="heading1"><![CDATA[<h1>Jury Panel</h1>]]>\n\n</string>
    <string name="heading2"><![CDATA[<h1>Prizes \& Awards</h1>]]>\n\n</string>
    <string name="sponsor"><![CDATA[<h1>In Association with</h1>]]>\n\n</string>
    <string name="eligible"><![CDATA[<h1>Eligibility Criteria</h1>]]>\n\n
Everyone who loves to put their ideas into visual stories</string>
    <string name="note"><![CDATA[<b>Note</b>]]>: It will not be possible to amend or update any information relating to your registration including the names of team members once validated.</string>
    <string name="comp_brief5"><![CDATA[<h1>Important Dates</h1>]]>\n\n
4 Dec’17 – Start of Competition |29 Dec’17 – End of Competition.\n\n

Important dates of every week - 4, 6, 8 | 11, 13, 15 | 18, 20, 22 | 25, 27, 29 Dec’17.
\n\n
Submissions of entries before 6 PM and Day Winners will be announced at 11PM on every next day respectively. Ex : On 5 Dec before 6 PM, the participants will have to submit their illustrations and at 11 PM, the winners of 4 Dec will be announced and so on.
\n\n
Week Winners and 3 words for a week will be announced at 11 PM on dates – 10, 17, 24 and 31Dec’17.
\n\n
15 Jan’18 – Final Result announcements and dispatching of gifts/goodies and Certificates.

</string>
    <string name="prizes1"><![CDATA[<h1>1st Prize - INR 5000</h1>]]>\n\n
    Featured stories + illustrations in magazines - IA&amp;B and Design Detail | 361 degree free event passes | Goodies worth INR 5000 from SqrFactor, Leewardists and 1989 | Certificate of achievement | Internship Opportunity with SqrFactor and partner firm | 20% waiver for upcoming ratLab Winter School 2017-18</string>
    <string name="prizes2"><![CDATA[<h1>2nd Prize - INR 3000</h1>]]>\n\n
    Featured stories + illustrations in magazines - IA&amp;B and Design Detail | 361 degree free event passes | Goodies worth INR 3000 from SqrFactor, Leewardists and 1989 | Certificate of achievement | Internship Opportunity with SqrFactor and partner firm | 20% waiver for upcoming ratLab Winter School 2017-18</string>
    <string name="prizes3"><![CDATA[<h1>3rd Prize - INR 2000</h1>]]>\n\n
    Featured stories + illustrations in magazines - IA&amp;B and Design Detail | 361 degree free event passes | Goodies worth INR 2000 from SqrFactor, Leewardists and 1989 | Certificate of achievement | Internship Opportunity with SqrFactor and partner firm | 20% waiver for upcoming ratLab Winter School 2017-18</string>
    <string name="prizes4"><![CDATA[<h1>4th Prize - INR 1500</h1>]]>\n\n
    Featured stories + illustrations in magazines - IA&amp;B and Design Detail and social media pages of SqrFactor and other partner organizations | Goodies worth INR 1500 from SqrFactor, Leewardists and 1989 | Certificate of achievement.</string>
    <string name="prizes5"><![CDATA[<h1>5th Prize - INR 1500</h1>]]>\n\n
    Featured stories + illustrations in magazines - IA&amp;B and Design Detail and social media pages of SqrFactor and other partner organizations | Goodies worth INR 1500 from SqrFactor, Leewardists and 1989 | Certificate of achievement</string>
    <string name="prizes6"><![CDATA[<h1>Week Winner - 1 - INR 1000</h1>]]>\n\n
    Goodies worth INR 1000 from SqrFactor and Leewardists | Winner\'s Illustrations on social media pages of SqrFactor and other partner organizations.</string>
    <string name="prizes7"><![CDATA[<h1>Week Winner - 2 - INR 800</h1>]]>\n\n
    Goodies worth INR 800 from SqrFactor and Leewardists | Winner\'s Illustrations on social media pages of SqrFactor and other partner organizations.</string>
    <string name="prizes8"><![CDATA[<h1>Week Winner - 3 - INR 700</h1>]]>\n\n
    Goodies worth INR 600 from SqrFactor and Leewardists | Winner\'s Illustrations on social media pages of SqrFactor and other partner organizations.</string>
    <string name="prizes9"><![CDATA[<h1>Day Winner - 1 - INR 500</h1>]]>\n\n
    Goodies worth INR 500 from Leewardists | Winner\'s Illustrations on social media pages of SqrFactor and other partner organizations.</string>
    <string name="prizes10"><![CDATA[<h1>Day Winner - 2 - INR 400</h1>]]>\n\n
    Goodies worth INR 400 from Leewardists | Winner\'s Illustrations on social media pages of SqrFactor and other partner organizations.</string>
    <string name="Event">We all have visited our ever so captivating Sanjay Gandhi National Park; the beautiful historic caves and it’s remnants are a living experience of the era that once existed there. We @Architails love discovering art and architecture of our own city and around the country! So join us on one of such events on Sunday 3rd June in collaboration with Tutelage For All, at 8:30am sharp. See you there! Please register soon, only limited spots available. No Refunds or Cancellations. Event Timing: SUNDAY, 3rd june 2018, 8:30 AM onwards. Event Address: Kanheri Caves, Mumbai, Maharashtra- 400101. https://bit.ly/2ItokFy Contact us at: Amey Dalvi 9833976340 or email us at: archdetail3@gmail.com. FURTHER INFORMATION 1) Assemble at kanheri caves entrance sharp at 8.30 am. 2) HOW TO REACH: -Borivali Station East: Bus No, 188 LTD -Local Rickshaw 3) From SGNP Gate to Kanheri Caves Gate: -Shuttle Bus Available of SGNP. 4) THINGS TO CARRY: - Sufficient Water - Cap and Glares - Camera/ Sketchbook/ Other equipments at your own risk. - Any form of ID Proof 5) Expenses to be beared by participants: i) Entrance fee At SGNP Gate: INR 45 ii) Entrance fee at Kanheri Gate: INR 15 iii) Photography/ Videography charges : INR 25 iv) Shuttle Vehicle Services to Kanheri as per park norms INR 14 ONE WAY</string>
    <string name="event_desc">Tell everyone about your event, don\'t \nforget to include your event contact \ninfo like email address and phone no.</string>
    <string name="jobdetails"><![CDATA[<h1>Experienced Project Manager</h1>]]>
                    <![CDATA[<h4>]]>Job Title/Position\t\tTest Job<![CDATA[<br>]]>
                    Category\t\tSenior Architect<![CDATA[<br>]]>
                    Type of Position\t\tFull Time<![CDATA[<br>]]>
                    Skills\t\tAutoCAD, Sketchup<![CDATA[<br>]]>
                    Educational Qualification\t\tB. Arch., M. Arch.<![CDATA[<br>]]>
                    Firm\t\tSqrFactor India Pvt. Ltd.<![CDATA[<br>]]>
                    Location\t\tIndore, Bhopal<![CDATA[<br>]]>
                    Job expires on\t\t11/08/2018<![CDATA[<br>]]>
        Expect Salary\t\t20000 to 30000<![CDATA[<br>]]><![CDATA[</h4>]]>
    </string>
    <string-array name="countries">
        <item>Choose country</item>
        <item>Antarctica</item>
        <item>Blah</item>
        <item>Blah</item>
        <item>Blah</item>
    </string-array>
    <string-array name="INR">
        <item>INR</item>
        <item>USD</item>
    </string-array>
    <string-array name="Status">
        <item>Select Status</item>
        <item>Idea</item>
        <item>In Progress</item>
        <item>Under Construction</item>
        <item>Complete</item>
    </string-array>
</resources>